data/derived/comb/progs/unify/prog1162.ml.out
Characters 87-88:
  | hd::tl -> f -1 hd
              ^
Error: This expression has type int -> int -> int
       but an expression was expected of type int
